--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^2.4.8",
+    "@chakra-ui/react": "^2.5.2",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@fontsource/kaushan-script": "^4.5.10",
     "@fontsource/sirin-stencil": "^4.5.8",
     "@testing-library/react": "^13.4.0",
-    "framer-motion": "^8.4.3",
+    "framer-motion": "^8.5.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
